@@ -1964,8 +1964,8 @@ SEXP attribute_hidden do_capabilities(SEXP call, SEXP op, SEXP args, SEXP rho)
 
     checkArity(op, args);
 
-    PROTECT(ans = allocVector(LGLSXP, 16));
-    PROTECT(ansnames = allocVector(STRSXP, 16));
+    PROTECT(ans = allocVector(LGLSXP, 17));
+    PROTECT(ansnames = allocVector(STRSXP, 17));
 
     SET_STRING_ELT(ansnames, i, mkChar("jpeg"));
 #ifdef HAVE_JPEG
@@ -2113,6 +2113,9 @@ SEXP attribute_hidden do_capabilities(SEXP call, SEXP op, SEXP args, SEXP rho)
 #else
     LOGICAL(ans)[i++] = FALSE;
 #endif
+
+    SET_STRING_ELT(ansnames, i, mkChar("long.double"));
+    LOGICAL(ans)[i++] = sizeof(LDOUBLE) > sizeof(double);
 
     setAttrib(ans, R_NamesSymbol, ansnames);
     UNPROTECT(2);
